# testrepo

./: .gitignore  CMakeLists.txt  CMakePresets.json  ECS_REVIEW.md  launch.vs.json
assets/models/: Capsule.glb  Cone.glb  Cuboid.glb  Cylinder.glb  Plane.glb  SimonSphere.glb  Sphere.glb  Torus.glb  WarrenSphere.glb
shaders/: triangle.vert
src/: CMakeLists.txt
src/app/: Simulation.cpp  Simulation.h  main.cpp
src/app/assets/: GlbLoader.cpp  GlbLoader.h
src/app/ecs/components/: AnimationComp.h  CameraComp.h  DebugTagComp.h  LightComp.h  LocalToWorldComp.h  PhysicsComp.h  PositionComp.h  RenderBoundsComp.h  RenderComp.h  RotationComp.h  ScaleComp.h  SkinningComp.h  VisibilityComp.h  WorldBoundsComp.h
src/app/ecs/systems/: RenderExtractSys.cpp  RenderExtractSys.h  SpinningSys.cpp  SpinningSys.h
src/app/scenes/: Scene.h  SphereScene.cpp  SphereScene.h  SpinningSquareScene.cpp  SpinningSquareScene.h  SpinningTriangleScene.cpp  SpinningTriangleScene.h  TestScene.cpp  TestScene.h
src/app/shaders/: triangle.vert
src/bench/: ecs_benchmark.cpp
src/content/: render_assets.db
src/engine/include/: Engine.h
src/engine/include/ecs/: AccessDeclaration.h  ComponentResidency.h  ComponentStorage.h  ComponentType.h  Entity.h  FrameViews.h  Query.h  StructuralCommandBuffer.h  StructuralPhase.h  System.h  SystemScheduler.h  TransactionJournal.h  World.h
src/engine/include/engine/: Engine.h
src/engine/include/engine/ecs/: Components.h  SystemScheduler.h  TransformPipeline.h  World.h
src/engine/include/engine/vulkan/: DeferredDeletionService.h  DeletionQueue.h  GpuAllocator.h  RenderGraph.h  SubmissionScheduler.h  UniqueHandle.h  VkBuffer.h  VkCore.h  VkDescriptors.h  VkPipeline.h  VkResourceAllocators.h  VkShaderModule.h  VkSwapchain.h
src/engine/include/renderer/: FileRuntimeAssetBackend.h  HttpRuntimeAssetBackend.h  RuntimeAssetBackend.h  RuntimeAssetService.h  SnapshotRing.h
src/engine/include/vulkan/: DeviceContext.h  FrameSync.h  PersistentResourceService.h  PipelineResources.h  PipelineStateUtils.h  RenderGraph.h  SwapchainResources.h  VkCommands.h  VkSync.h  VkUtils.h
src/engine/source/: Engine.cpp
src/engine/source/ecs/: Entity.cpp  SystemScheduler.cpp  TransactionJournal.cpp  World.cpp
src/engine/source/renderer/: FileRuntimeAssetBackend.cpp  HttpRuntimeAssetBackend.cpp  RuntimeAssetService.cpp
src/engine/source/vulkan/: DeferredDeletionService.cpp  DeletionQueue.cpp  DeviceContext.cpp  FrameSync.cpp  GpuAllocator.cpp  PersistentResourceService.cpp  PipelineResources.cpp  RenderGraph.cpp  SubmissionScheduler.cpp  SwapchainResources.cpp  VkBuffer.cpp  VkCommands.cpp  VkCore.cpp  VkDescriptors.cpp  VkPipeline.cpp  VkResourceAllocators.cpp  VkShaderModule.cpp  VkSwapchain.cpp  VkSync.cpp  VkUtils.cpp
src/engine/tests/: EcsWorldTests.cpp  ExtractIncrementalTests.cpp  PersistentRenderResourceTests.cpp  RenderGraphDagTests.cpp  SchedulerInvariantTests.cpp  SimulationE2ETests.cpp  SnapshotRingTests.cpp
